# seed-phrase-checker-trac

./: .gitignore  LICENSE.md  README.md  index.html  package.json  server.ts  tsconfig.json
contract/: contract.js  protocol.js
dev/: notes.md
features/: roadmap.md
python/: generate_wordlist.py  wordlist.py
rust/: Cargo.toml
scripts/: run.sh
src/: checker.js  checker.ts  types.ts
styles/: main.css
test/: test.js  test.ts
